Fix some more spacing issues

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -178,5 +178,5 @@ footer {
     margin-bottom: 40px;
 }
 .posts .list-group-item-heading {
-    max-width: 80%;
+    margin-right: 80px;
 }
